--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -36,6 +36,10 @@
       width: 35%;
       margin: 0.2rem;
       padding: 0.2rem;
+
+    }
+    .quantity-type {
+      width: 55px;
     }
   }
 
@@ -43,7 +47,7 @@
     width: 90%;
   }
   select {
-    padding: 0.2rem;
+    padding: 0.4rem;
     margin: 0.1rem;
   }
 
