--- a/client/src/components/HomePage/HomePage.scss
+++ b/client/src/components/HomePage/HomePage.scss
@@ -104,9 +104,19 @@
   .random-one-container {
     margin-top: 5rem;
     .random-one-img {
-      height: 500px;
-      background-size: 100%;
-      width: 100%; 
+      height: 400px;
+      background-size: cover;
+      width: 90%;
+      margin: 0 auto; 
+      background-size: cover;
+    }
+
+    @media(min-width: 1000px) {
+      .random-one-img {
+        height: 500px;
+        width: 50%; 
+        margin-left: 50px;
+      }
     }
 
     .random-one-body {
@@ -128,12 +138,7 @@
     }
     @media (min-width: 1000px) {
       .random-one-body {
-        width: 80%;
-      }
-  
-      .random-one-img {
-        height: 600px;
-        width: 50%; 
+        width: 70%;
       }
     }
   }
@@ -169,6 +174,7 @@
       }
 
       .hungarian-card-body {
+        padding: 2rem 0;
         .hungarian-card-title {
           h1 {
             font-size: 1.7rem;
@@ -222,10 +228,11 @@
 
       .homepage-link {
         .fast-recipes-card-img {
-          height: 400px;
+          height: 250px;
         }
 
         .fast-recipes-card-body {
+          padding: 2rem;
           .fast-recipes-card-title {
             text-align: center;
             width: 100%;
