--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -16,6 +16,7 @@
     border-radius: 6px;
     background-color: rgb(70, 153, 62);
     margin-top: 1rem;
+    cursor: pointer;
   }
 
   .forgot-password {
