--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -56,6 +56,7 @@ nav ul li .link {
 nav .log-buttons button {
   color: white;
   padding: 0.5rem 1.5rem;
+  cursor: pointer;
 }
 
 nav .log-buttons .login {
