--- a/client/src/components/RecipeSingle/RecipeSingle.css
+++ b/client/src/components/RecipeSingle/RecipeSingle.css
@@ -4,42 +4,29 @@
   background-color: white;
 }
 
-.recipe-single-image {
+.recipe-single-container .recipe-single-header .recipe-single-image {
   height: 500px;
   width: 100%;
 }
 
-.recipe-single-userName {
+@media (min-width: 768px) {
+  .recipe-single-container .recipe-single-header .recipe-single-image {
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+
+.recipe-single-container .recipe-single-header .recipe-single-userName {
   text-align: center;
   margin: 1.5rem;
 }
 
-@media (min-width: 768px) {
-  .recipe-single-image {
-    width: 50%;
-    margin: 0 auto;
-  }
-  .recipe-time {
-    width: 60%;
-    margin: 0 auto;
-  }
-}
-
-.recipe-single-content {
+.recipe-single-container .recipe-single-content {
   min-height: 500px;
   border-radius: 15px;
 }
 
-.recipe-header {
-  text-align: center;
-  padding: 1rem;
-}
-
-.recipe-header .recipe-title {
-  margin: 1rem;
-}
-
-.recipe-single-body {
+.recipe-single-container .recipe-single-content .recipe-single-body {
   margin-top: -1rem;
   position: relative;
   z-index: 98;
@@ -47,11 +34,11 @@
   min-height: 500px;
 }
 
-.recipe-single-body h4 {
-  margin: .6rem;
+.recipe-single-container .recipe-single-content .recipe-single-body h4 {
+  margin: 0.6rem;
 }
 
-.recipe-time {
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-time {
   border-radius: 14px;
   margin-top: -1rem;
   color: black;
@@ -69,7 +56,7 @@
   border-bottom: 1px solid gray;
 }
 
-.recipe-time .times {
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-time .times {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -83,23 +70,35 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
-.recipe-single-ingredients {
+@media (min-width: 768px) {
+  .recipe-single-container .recipe-single-content .recipe-single-body .recipe-time {
+    width: 60%;
+    margin: 0 auto;
+  }
+}
+
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-header {
+  text-align: center;
+  padding: 1rem;
+}
+
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-header .recipe-title {
+  margin: 1rem;
+}
+
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-ingredients {
   -webkit-box-shadow: -2px 4px 46px 0px rgba(110, 110, 110, 0.75);
           box-shadow: -2px 4px 46px 0px rgba(110, 110, 110, 0.75);
   text-align: center;
-}
-
-.recipe-single-ingredients,
-.recipe-single-step {
   border-radius: 15px;
-  padding: .5rem;
+  padding: 0.5rem;
   margin: 1rem 0 3rem 0;
 }
 
-.recipe-single-ingredient {
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-ingredients .recipe-single-ingredient {
   margin: 1rem;
   display: -ms-grid;
   display: grid;
@@ -115,34 +114,51 @@
   border: 1px solid #c5c2c2;
 }
 
-.recipe-single-ingredient-data {
-  padding: .5rem;
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-ingredients .recipe-single-ingredient .recipe-single-ingredient-data {
+  padding: 0.5rem;
   text-align: center;
 }
 
-.recipe-single-step {
-  margin: .5rem;
-  background-color: #FF731D;
+@media (min-width: 768px) {
+  .recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-ingredients {
+    width: 60%;
+    margin: 3rem auto;
+  }
+}
+
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps {
+  border-radius: 15px;
+  padding: 0.5rem;
+  margin: 1rem 0 3rem 0;
+  margin: 0.5rem;
+  background-color: #ff731d;
   color: white;
   text-align: center;
 }
 
-.recipe-single-step:hover {
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
-  -webkit-transform: scale(1.01);
-          transform: scale(1.01);
-}
-
-.step-index {
-  font-size: 1.2rem;
-}
-
-.recipe-single-step-content {
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps .recipe-single-step .recipe-single-step-content {
   padding: 1rem;
 }
 
-.recipe-single-comment {
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps .recipe-single-step .step-index {
+  font-size: 1.2rem;
+}
+
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps:hover {
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+}
+
+@media (min-width: 768px) {
+  .recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps .recipe-single-step {
+    width: 60%;
+    margin: .8rem auto;
+  }
+}
+
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-comment {
   min-height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -160,7 +176,7 @@
   padding: 2rem;
 }
 
-.recipe-single-comment h1 {
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-comment h1 {
   margin: 2rem;
 }
 
@@ -170,12 +186,5 @@
     width: 60%;
     margin: 3rem auto;
   }
-}
-
-.dark {
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
-  color: white;
-  background-color: #00343d;
 }
 /*# sourceMappingURL=RecipeSingle.css.map */
