--- a/client/src/components/RecipeList/RecipeList.scss
+++ b/client/src/components/RecipeList/RecipeList.scss
@@ -2,6 +2,10 @@
   .recipeList-welcome {
     text-align: center;
     margin: 7rem 2rem;
+
+    h3 {
+      margin-top: 2rem;
+    }
   }
   .recipeList {
     grid-template-columns: repeat(3, 1fr);
