--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=IBM+Plex+Sans+Arabic:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@200&family=Lobster&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -28,8 +30,9 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-family: 'Concert One', cursive;
+h6
+ {
+  font-family: 'Lobster', cursive;
 }
 
 p,
