--- a/client/src/components/Nav/Nav.scss
+++ b/client/src/components/Nav/Nav.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Concert+One&family=IBM+Plex+Sans+Arabic:wght@200&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@200&family=Lobster&display=swap');
 
 header {
   .menu-toggle {
@@ -15,6 +15,8 @@ header {
     cursor: pointer;
   }
 }
+
+@media (min-width: 768px) { } 
 
 nav {
   position: fixed;
@@ -39,15 +41,18 @@ nav {
     li {
       .link {
         text-decoration: none;
-        font-family: "Concert One", cursive;
         font-size: 3rem;
+        font-family: 'IBM Plex Sans Arabic', sans-serif;
+        font-weight: bolder ;
       }
     }
   }
   .log-buttons {
+    margin-top: 2rem;
     button {
       color: white;
       padding: 0.5rem 1.5rem;
+      margin: 1rem;
       cursor: pointer;
     }
 
@@ -87,7 +92,6 @@ nav {
       height: 50px;
       flex-direction: row;
       justify-content: space-between;
-      border-bottom: 1px solid;
 
       ul {
         display: flex;
@@ -100,6 +104,13 @@ nav {
           }
         }
       }
+      .log-buttons {
+        margin-top: 0;
+        button {
+          margin: 0;
+        }
+      }
     }
   }
 }
+
