--- a/client/src/components/SearchBox/SearchBox.css
+++ b/client/src/components/SearchBox/SearchBox.css
@@ -29,18 +29,20 @@
 
 .search-box .search-box-component input {
   border-radius: 10px;
+  border: .5px solid gray;
   padding: 0.7rem;
   width: 95%;
   margin: 0 auto;
 }
 
 .search-box .search-box-component :focus {
-  padding: 1.2rem;
+  padding: 1.01rem;
+  border: 1px solid blueviolet;
 }
 
 .search-box .founded-recipe-list-component {
   width: 100%;
-  margin-top: -0.3rem;
+  margin-top: .5rem;
 }
 
 .search-box .founded-recipe-list-component ul .founded-recipes-link {
@@ -51,8 +53,9 @@
 
 .search-box .founded-recipe-list-component ul .founded-recipes-link li {
   list-style-type: none;
-  border-bottom: 0.5px solid #b8b8b8;
+  border-bottom: 0.2px solid #f1f1f1;
   padding: 0.5rem;
+  margin-bottom: .2rem;
 }
 
 .search-box .founded-recipe-list-component ul .founded-recipes-link li .mini-img {
@@ -63,8 +66,13 @@
 .search-box .founded-recipe-list-component ul .founded-recipes-link :hover {
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  -webkit-transform: translate(-20px);
+          transform: translate(-20px);
+  background-color: orange;
+  color: white;
+  font-weight: bolder;
+  border-bottom: none;
+  border-radius: 10px;
 }
 
 .search-box .founded-recipe-list-component ul hr {
