--- a/client/src/components/SearchBox/SearchBox.scss
+++ b/client/src/components/SearchBox/SearchBox.scss
@@ -17,18 +17,20 @@
 
     input {
       border-radius: 10px;
+      border: .5px solid gray;
       padding: 0.7rem;
       width: 95%;
       margin: 0 auto;
     }
     :focus {
-      padding: 1.2rem;
+      padding: 1.01rem;
+      border: 1px solid blueviolet;
     }
   }
 
   .founded-recipe-list-component {
     width: 100%;
-    margin-top: -0.3rem;
+    margin-top: .5rem;
     ul {
       .founded-recipes-link {
         color: black;
@@ -36,8 +38,9 @@
         font-family: "IBM Plex Sans Arabic", sans-serif;
         li {
           list-style-type: none;
-          border-bottom: 0.5px solid rgb(184, 184, 184);
+          border-bottom: .2px solid rgb(241, 241, 241);
           padding: 0.5rem;
+          margin-bottom: .2rem;
           .mini-img {
             width: 30px;
             height: 30px;
@@ -45,7 +48,12 @@
         }
         :hover {
           transition: all 0.4s ease-in-out;
-          transform: scale(1.05);
+          transform: translate(-20px);
+          background-color: orange;
+          color: white;
+          font-weight: bolder;
+          border-bottom: none;
+          border-radius: 10px;
         }
       }
       hr {
