--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -58,6 +58,7 @@ input {
 .form-container textarea {
   width: 100%;
   margin-top: 1rem;
+  padding: .5rem;
 }
 
 .form-container .file-container .file-button {
