--- a/client/src/components/RecipeList/RecipeList.scss
+++ b/client/src/components/RecipeList/RecipeList.scss
@@ -2,9 +2,19 @@
   .recipeList-welcome {
     text-align: center;
     margin: 7rem 2rem;
-    
+
+    .user-name {
+       color: #fd841f;
+      }
+      
+      .number-of-recipes {
+        color: #fd841f;
+        padding: .3rem;
+        font-size: 2.3rem;
+    }
     h3 {
       margin-top: 2rem;
+
     }
 
     .navigate-to-recipes-form {
