--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -8,6 +8,7 @@
 
   h1 {
     margin: 5rem 0 2rem 0;
+    font-size: 3rem;
   }
 
   .login-button {
@@ -17,6 +18,7 @@
     background-color: rgb(70, 153, 62);
     margin-top: 1rem;
     cursor: pointer;
+    border: none;
   }
 
   .forgot-password {
