--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -9,7 +9,7 @@ header .menu-toggle {
   font-size: 1.5rem;
   opacity: 0.7;
   color: black;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #f0f0f0;
   cursor: pointer;
 }
 
@@ -17,7 +17,7 @@ nav {
   position: fixed;
   width: 100%;
   height: 100vh;
-  background-color: white;
+  background-color: #fd841f;
   z-index: 99;
   left: -100%;
   top: 0;
@@ -26,6 +26,7 @@ nav {
 }
 
 nav .nav-wrapper {
+  text-align: center;
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -49,9 +50,10 @@ nav ul {
 
 nav ul li .link {
   text-decoration: none;
-  font-size: 3rem;
-  font-family: 'IBM Plex Sans Arabic', sans-serif;
+  font-size: 2.5rem;
+  font-family: 'Lobster', cursive;
   font-weight: bolder;
+  color: white;
 }
 
 nav .log-buttons {
@@ -59,6 +61,7 @@ nav .log-buttons {
 }
 
 nav .log-buttons button {
+  border: none;
   color: white;
   padding: 0.5rem 1.5rem;
   margin: 1rem;
@@ -93,6 +96,7 @@ nav .log-buttons .register {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    background-color: white;
   }
   nav .nav-wrapper {
     max-width: 1200px;
@@ -117,6 +121,7 @@ nav .log-buttons .register {
   nav .nav-wrapper ul li .link {
     font-size: 1.2rem;
     margin: 0 1rem;
+    color: #fd841f;
   }
   nav .nav-wrapper .log-buttons {
     margin-top: 0;
@@ -124,5 +129,9 @@ nav .log-buttons .register {
   nav .nav-wrapper .log-buttons button {
     margin: 0;
   }
+}
+
+.selected {
+  color: black;
 }
 /*# sourceMappingURL=Nav.css.map */
