--- a/client/src/components/Nav/Nav.scss
+++ b/client/src/components/Nav/Nav.scss
@@ -11,23 +11,24 @@ header {
     font-size: 1.5rem;
     opacity: 0.7;
     color: black;
-    border: 1px solid rgb(224, 224, 224);
+    border: 1px solid rgb(240, 240, 240);
     cursor: pointer;
   }
 }
 
-@media (min-width: 768px) { } 
 
 nav {
   position: fixed;
   width: 100%;
   height: 100vh;
-  background-color: white;
+  background-color: #fd841f;
   z-index: 99;
   left: -100%;
   top: 0;
   transition: all 0.4s ease-in-out;
+
   .nav-wrapper {
+    text-align: center;
     width: 100%;
     height: 100%;
     display: flex;
@@ -41,15 +42,17 @@ nav {
     li {
       .link {
         text-decoration: none;
-        font-size: 3rem;
-        font-family: 'IBM Plex Sans Arabic', sans-serif;
+        font-size: 2.5rem;
+        font-family: 'Lobster', cursive;
         font-weight: bolder ;
+        color: white;
       }
     }
   }
   .log-buttons {
     margin-top: 2rem;
     button {
+      border: none;
       color: white;
       padding: 0.5rem 1.5rem;
       margin: 1rem;
@@ -86,13 +89,13 @@ nav {
     width: 100%;
     height: 50px;
     justify-content: space-between;
+    background-color: white;
     .nav-wrapper {
       max-width: 1200px;
       margin: 0 auto;
       height: 50px;
       flex-direction: row;
       justify-content: space-between;
-
       ul {
         display: flex;
         justify-content: space-between;
@@ -101,6 +104,7 @@ nav {
           .link {
             font-size: 1.2rem;
             margin: 0 1rem;
+            color: #fd841f;;
           }
         }
       }
@@ -114,3 +118,6 @@ nav {
   }
 }
 
+.selected {
+  color: black;
+}
