--- a/client/src/components/RecipeSingle/RecipeSingle.css
+++ b/client/src/components/RecipeSingle/RecipeSingle.css
@@ -131,13 +131,15 @@
 }
 
 .recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps {
-  border-radius: 15px;
-  padding: 0.5rem;
-  margin: 1rem 0 3rem 0;
-  margin: 0.5rem;
-  background-color: #ff731d;
   color: white;
   text-align: center;
+}
+
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps .recipe-single-step {
+  border-radius: 15px;
+  padding: 0.5rem;
+  background-color: #ff731d;
+  margin: 1.5rem .5rem;
 }
 
 .recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps .recipe-single-step .recipe-single-step-content {
@@ -148,7 +150,7 @@
   font-size: 1.2rem;
 }
 
-.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps:hover {
+.recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps .recipe-single-step:hover {
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
   -webkit-transform: scale(0.98);
@@ -157,7 +159,7 @@
 
 @media (min-width: 768px) {
   .recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps .recipe-single-step {
-    margin: .5rem auto;
+    margin: 0.5rem auto;
   }
 }
 
