--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,8 +1,32 @@
 .footer {
-  height: 400px;
+  height: 200px;
   margin-top: 4rem;
   width: 100%;
   max-width: 1200px;
   border-top: 1px solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: orange;
+}
+
+.footer h1 {
+  color: white;
+  margin: 1rem;
+}
+
+.footer .personal-contact a {
+  color: white;
+  padding: 2rem;
 }
 /*# sourceMappingURL=Footer.css.map */
