Styling dessert section, uploading recipes

--- a/client/src/components/HomePage/HomePage.scss
+++ b/client/src/components/HomePage/HomePage.scss
@@ -7,7 +7,7 @@
 .recipe-icon {
   margin-left: 1rem;
   position: relative;
-  top: .5rem;
+  top: 0.5rem;
   color: rgb(240, 156, 0);
 }
 
@@ -108,14 +108,14 @@
       height: 400px;
       background-size: cover;
       width: 90%;
-      margin: 0 auto; 
+      margin: 0 auto;
       background-size: cover;
     }
 
-    @media(min-width: 1000px) {
+    @media (min-width: 1000px) {
       .random-one-img {
         height: 500px;
-        width: 50%; 
+        width: 50%;
         margin-left: 50px;
       }
     }
@@ -143,8 +143,6 @@
       }
     }
   }
-
- 
 
   /* HUNGARIAN-FIVE-STYLES */
 
@@ -263,10 +261,6 @@
   }
 }
 
-
-
-
-
 .dessert-container {
   margin: 0.5rem;
 
@@ -309,21 +303,50 @@
           margin-bottom: 4rem;
         }
 
-        .dessert-recipes-card-content {
-          text-align: center;
+        .dessert-recipes-content {
           width: 100%;
           position: absolute;
-          bottom: 10px;
+          text-align: center;
           left: 0;
+          bottom: 10px;
         }
       }
+    }
+
+    .dessert-for-you {
+      background-color: orange;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
   @media (min-width: 768px) {
     .dessert-recipes-cards {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(6, 1fr);
+
+      .dessert-recipes-card:nth-child(1) {
+        grid-column: 1 / 4;
+      }
+      .dessert-recipes-card:nth-child(2) {
+        grid-column: 4 / 7;
+      }
+      .dessert-recipes-card:nth-child(3) {
+        grid-column: 5 / 7;
+      }
+      
+      .dessert-for-you {
+        grid-column: 1 / 5;
+        grid-row: 2 / 3;
+      }
     }
   }
+
 }
 
+.goodbye {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 6rem 0rem;
 
+}
