--- a/client/src/components/HomePage/HomePage.css
+++ b/client/src/components/HomePage/HomePage.css
@@ -7,7 +7,7 @@
 .recipe-icon {
   margin-left: 1rem;
   position: relative;
-  top: .5rem;
+  top: 0.5rem;
   color: #f09c00;
 }
 
@@ -318,18 +318,61 @@
   margin-bottom: 4rem;
 }
 
-.dessert-container .dessert-recipes-cards .homepage-link .dessert-recipes-card-body .dessert-recipes-card-content {
-  text-align: center;
+.dessert-container .dessert-recipes-cards .homepage-link .dessert-recipes-card-body .dessert-recipes-content {
   width: 100%;
   position: absolute;
-  bottom: 10px;
+  text-align: center;
   left: 0;
+  bottom: 10px;
+}
+
+.dessert-container .dessert-recipes-cards .dessert-for-you {
+  background-color: orange;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media (min-width: 768px) {
   .dessert-container .dessert-recipes-cards {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-columns: (1fr)[6];
+        grid-template-columns: repeat(6, 1fr);
   }
+  .dessert-container .dessert-recipes-cards .dessert-recipes-card:nth-child(1) {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1 / 4;
+  }
+  .dessert-container .dessert-recipes-cards .dessert-recipes-card:nth-child(2) {
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 3;
+    grid-column: 4 / 7;
+  }
+  .dessert-container .dessert-recipes-cards .dessert-recipes-card:nth-child(3) {
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 2;
+    grid-column: 5 / 7;
+  }
+  .dessert-container .dessert-recipes-cards .dessert-for-you {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1 / 5;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+  }
+}
+
+.goodbye {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 6rem 0rem;
 }
 /*# sourceMappingURL=HomePage.css.map */
