--- a/client/src/components/HomePage/HomePage.css
+++ b/client/src/components/HomePage/HomePage.css
@@ -329,6 +329,7 @@
 .dessert-container .dessert-recipes-cards .dessert-for-you {
   background-color: orange;
   color: white;
+  font-size: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -347,26 +348,32 @@
   }
   .dessert-container .dessert-recipes-cards .dessert-recipes-card:nth-child(1) {
     -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-column: 1 / 4;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
   }
   .dessert-container .dessert-recipes-cards .dessert-recipes-card:nth-child(2) {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/ 4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/ 3;
+  }
+  .dessert-container .dessert-recipes-cards .dessert-recipes-card:nth-child(3) {
     -ms-grid-column: 4;
     -ms-grid-column-span: 3;
     grid-column: 4 / 7;
-  }
-  .dessert-container .dessert-recipes-cards .dessert-recipes-card:nth-child(3) {
-    -ms-grid-column: 5;
-    -ms-grid-column-span: 2;
-    grid-column: 5 / 7;
-  }
-  .dessert-container .dessert-recipes-cards .dessert-for-you {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 4;
-    grid-column: 1 / 5;
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
-    grid-row: 2 / 3;
+    grid-row: 2/ 3;
+  }
+  .dessert-container .dessert-recipes-cards .dessert-for-you {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
+    grid-column: 3 / 7;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
   }
 }
 
