--- a/client/src/components/HomePage/HomePage.scss
+++ b/client/src/components/HomePage/HomePage.scss
@@ -316,6 +316,7 @@
     .dessert-for-you {
       background-color: orange;
       color: white;
+      font-size: 1.5rem;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -326,27 +327,27 @@
       grid-template-columns: repeat(6, 1fr);
 
       .dessert-recipes-card:nth-child(1) {
-        grid-column: 1 / 4;
+        grid-column: 1 / 3;
       }
       .dessert-recipes-card:nth-child(2) {
-        grid-column: 4 / 7;
+        grid-column: 1/ 4;
+        grid-row: 2/ 3;
       }
       .dessert-recipes-card:nth-child(3) {
-        grid-column: 5 / 7;
+        grid-column: 4 / 7;
+        grid-row: 2/ 3;
       }
-      
+
       .dessert-for-you {
-        grid-column: 1 / 5;
-        grid-row: 2 / 3;
+        grid-column: 3 / 7;
+        grid-row: 1 / 2;
       }
     }
   }
-
 }
 
 .goodbye {
   text-align: center;
   font-size: 1.5rem;
   margin: 6rem 0rem;
-
 }
