--- a/client/src/components/Nav/Nav.scss
+++ b/client/src/components/Nav/Nav.scss
@@ -21,7 +21,7 @@ nav {
   position: fixed;
   width: 100%;
   height: 100vh;
-  background-color: #fd841f;
+  background-color: orange;
   z-index: 99;
   left: -100%;
   top: 0;
@@ -104,7 +104,7 @@ nav {
           .link {
             font-size: 1.2rem;
             margin: 0 1rem;
-            color: #fd841f;;
+            color: orange;
           }
         }
       }
