--- a/client/src/components/RecipeSingle/RecipeSingle.css
+++ b/client/src/components/RecipeSingle/RecipeSingle.css
@@ -138,7 +138,7 @@
 .recipe-single-container .recipe-single-content .recipe-single-body .recipe-single-steps .recipe-single-step {
   border-radius: 15px;
   padding: 0.5rem;
-  background-color: #ff731d;
+  background-color: orange;
   margin: 1.5rem .5rem;
 }
 
