--- a/client/src/components/RecipeSingle/RecipeSingle.scss
+++ b/client/src/components/RecipeSingle/RecipeSingle.scss
@@ -111,7 +111,7 @@
         .recipe-single-step {
           border-radius: 15px;
           padding: 0.5rem;
-          background-color: #ff731d;
+          background-color: orange;
           margin: 1.5rem .5rem;
           .recipe-single-step-content {
             padding: 1rem;
