--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -3,20 +3,18 @@
   margin-top: 10rem;
   width: 100%;
   max-width: 1200px;
-  border-top: 1px solid;
+  border-top: 1px solid rgb(75, 75, 75);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: orange;
   h1 {
-    color: white;
     margin: 1rem;
   }
   
   .personal-contact {
     a {
-      color: white;
+      color: black;
       padding: 2rem;
     }
   }
